[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/img/Title.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/sound/PlayBall.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), null ],
"loop": true,
"name": "Flashing",
"speed": 10.0
} ]

[node name="StartScreen" type="Control"]
anchor_left = -0.00189912
anchor_top = -0.00202573
anchor_right = 0.998101
anchor_bottom = 0.997974
margin_left = -0.486176
margin_right = -0.486176
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BoothTitleImageNode" type="Node2D" parent="."]
position = Vector2( 128, 57.855 )

[node name="BoothTitleImage" type="AnimatedSprite" parent="BoothTitleImageNode"]
frames = SubResource( 1 )
animation = "Flashing"
__meta__ = {
"_edit_lock_": true
}

[node name="PlayBallAudio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayBallAudio"]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_top = 145.853
margin_right = 256.0
margin_bottom = 159.853
text = "W, A, S, D to Move"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 165.0
margin_right = 256.0
margin_bottom = 179.0
text = "Enter to Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
